UI alignment fix for icons

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -182,10 +182,7 @@ h1 {
 
 .scores {
   display: grid;
-  justify-content: center;
   grid-template-columns: repeat(2, 1fr);
-  justify-items: center;
-  align-items: center;
   font-size: 30px;
   margin-top: 30px;
 }
@@ -194,7 +191,6 @@ h1 {
 .computer-results {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 0.5rem;
 }
@@ -212,10 +208,12 @@ h1 {
 .result {
   opacity: 0.3;
   font-size: 40px;
+  padding: 10px;
 }
 
 .result.winner {
-  font-size: 60px;
+  font-size: 50px;
+  padding: 0;
   opacity: 1;
 }
 
